--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "@tanstack/vue-query": "^5.24.1",
+    "@tanstack/vue-query-devtools": "^5.24.1",
     "@vee-validate/i18n": "^4.12.4",
     "@vee-validate/rules": "^4.12.4",
     "@vee-validate/zod": "^4.12.4",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jwt-decode": "^4.0.0",
+    "pinia": "^2.1.7",
     "tailwind-merge": "^2.2.0",
     "vee-validate": "^4.12.4",
     "vue": "^3.3.4",
@@ -22,9 +27,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@vitejs/plugin-vue": "^4.2.3",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.18",
     "postcss": "^8.4.29",
+    "postcss-import": "^16.0.1",
+    "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
